--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Simple portfolio page for me",
   "private": true,
   "scripts": {
-    "watch:css": "postcss ./src/css/style.css -o dist/css/style.css --watch",
-    "build:css": "postcss ./src/css/style.css -o dist/css/style.css"
+    "watch:css": "postcss ./src/css/style.css -o dist/css/style.min.css --watch",
+    "build:css": "postcss ./src/css/style.css -o dist/css/style.min.css"
   },
   "keywords": [
     "Engineer",
